# python-project-83

./: .gitignore  Makefile  README.md  database.sql  env.example  pyproject.toml  setup.cfg
page_analyzer/: app.py  config.py  db.py  parser.py  urls.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/components/: form.html  navbar.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/urls/: index.html  url.html
